# kakoune-acp

./: .gitmodules  Cargo.toml  LICENSE  README.md
docs/: kak_json_rpc.txt  kak_sh_interfacing.asciidoc
examples/: mock_agent.rs
nix/modules/: devshell.nix  rust.nix
ref-examples/: agent.rs  client.rs
src/: cli.rs  daemon.rs  ipc.rs  ipc_client.rs  kakoune.rs  main.rs  prompt.rs  status.rs  transcript.rs
tests/: e2e.rs  integration.rs
