[package]
authors = ["Albert O'Shea <albertoshea2@gmail.com>"]
edition = "2021"
# If you change the name here, you must also do it in flake.nix (and run `cargo generate-lockfile` afterwards)
name = "kakount-acp"
description = "A simple Rust project using Nix"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
agent-client-protocol = "0.4.5"
anyhow = "1.0"
async-trait = "0.1"
clap = { version = "4.3.14", features = ["derive", "env"] }
env_logger = "0.10"
log = "0.4"
futures = "0.3"
tokio = { version = "1.37", features = ["macros", "rt", "rt-multi-thread", "process", "io-util", "io-std", "sync", "signal"] }
tokio-util = { version = "0.7", features = ["compat"] }
