[package]
authors = ["Albert O'Shea <albertoshea2@gmail.com>"]
edition = "2024"
# If you change the name here, you must also do it in flake.nix (and run `cargo generate-lockfile` afterwards)
name = "kakoune-acp"
description = "A simple Rust project using Nix"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
agent-client-protocol = "0.4.5"
anyhow = "1.0"
async-trait = "0.1"
clap = { version = "4.5.48", features = ["derive", "env"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.47", features = [
    "macros",
    "rt-multi-thread",
    "process",
    "fs",
    "io-util",
    "net",
    "sync",
    "signal",
    "io-std",
] }
tokio-util = { version = "0.7", features = ["compat"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
